added shop categories

--- a/src/stores.html
+++ b/src/stores.html
@@ -1,11 +1,14 @@
-<include src="src/layouts/head.html" locals='{"pageTitle": "Stores Directory"}'>
+<include src="src/layouts/head.html" locals='{"pageTitle": "Mintpay | Online Shopping with Buy Now Pay Late"}'>
+</include>
+
+<include src="src/layouts/head.html" locals='{"pageDescription": "Indulge in the most cost-effective and convenient online shopping experience using the Mintpay Buy Now Pay Later feature with our catalogue of partnered merchants. Our merchant partners include the best online stores in Sri Lanka. Mintpay is your ideal partner when it comes to shopping for clothes online in Sri Lanka."}'>
 </include>
 
 <section class="sub-page-header-section pink-bg">
     <include src="src/layouts/main-header.html"></include>
     <div class="container text-center">
         <h1 class="font-weight-bold mp-text-dark-blue mb-4">Shop Now with Mintpay.</h1>
-        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, in.</h4>
+        <h4>It does not get much better than this. All your favourite brands under one roof at Mintpay! Whether you are online shopping for jewellery, jumpsuits or just online dress shopping in general, you can now enjoy buying anything your heart desires with ease.</h4>
     </div>
 </section>
 
@@ -23,29 +26,27 @@
                 <div class="filter-block__slider__item">Men</div>
             </div>
             <div>
-                <div class="filter-block__slider__item">Beauty</div>
+                <div class="filter-block__slider__item">Beauty &amp; Fragrance</div>
             </div>
             <div>
                 <div class="filter-block__slider__item">Jewelry &amp; Accessories</div>
             </div>
-            <div>
+            <!-- <div>
                 <div class="filter-block__slider__item">Miscellaneous</div>
-            </div>
+            </div> -->
         </div>
     </div>
 
     <div class="category-block">
         <div class="container">
             <div class="category-block__title">Featured</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, ratione explicabo officiis quae minus
-                optio dolores labore hic soluta assumenda, impedit autem quibusdam debitis? Perspiciatis ut nobis
-                quasi incidunt quidem?</p>
+            <p>Discover the latest and upcoming brands.</p>
         </div>
 
         <div class="continer-fluid mt-5">
-            <div class="mobile-view-more d-flex justify-content-end px-4">
+           <!--  <div class="mobile-view-more d-flex justify-content-end px-4">
                 <a href="featured.html">view more <i class="fi-sr-arrow-right ps-2"></i></a>
-            </div>
+            </div> -->
             <div class="store-block">
                 <div class="store-block__item">
                     <div class="store-img position-relative">
@@ -61,7 +62,7 @@
 
                 <div class="store-block__item">
                     <div class="store-img position-relative">
-                        <img src="assets/img/stores/zigzag.jpg" alt="">
+                        <img src="assets/img/stores/zigzag-old.jpg" alt="">
                         <div class="store-link">
                             <a href="http://zigzag.lk" target="_blank">
                                 <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/zigzag.png" alt="">
@@ -73,7 +74,7 @@
 
                 <div class="store-block__item">
                     <div class="store-img position-relative">
-                        <img src="assets/img/stores/zigma-jones.jpg" alt="">
+                        <img src="assets/img/stores/zigmajones.jpg" alt="">
                         <div class="store-link">
                             <a href="https://zigmajones.com/" target="_blank">
                                 <img class="rectangular-logo" src="assets/img/stores/logos/zigmajones.png" alt="">
@@ -108,43 +109,43 @@
 
         <div class="continer-fluid mt-5">
             <div class="mobile-view-more d-flex justify-content-end px-4">
-                <a href="featured.html">view more <i class="fi-sr-arrow-right ps-2"></i></a>
+                <a href="women.html">view more <i class="fi-sr-arrow-right ps-2"></i></a>
             </div>
             <div class="store-block">
                 <div class="store-block__item">
                     <div class="store-img position-relative">
-                        <img src="assets/img/stores/ekko.jpg" alt="">
-                        <div class="store-link">
-                            <a href="https://zigmajones.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/ekko.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-                    <h5 class="store-title mt-3">EKKO</h5>
-                </div>
-
-                <div class="store-block__item">
-                    <div class="store-img position-relative">
-                        <img src="assets/img/stores/thirteen31.png" alt="">
-                        <div class="store-link">
-                            <a href="https://www.thirteen31.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/thirteen.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-                    <h5 class="store-title mt-3">Thirteen 31</h5>
-                </div>
-
-                <div class="store-block__item">
-                    <div class="store-img position-relative">
                         <img src="assets/img/stores/zigzag.jpg" alt="">
                         <div class="store-link">
-                            <a href="https://www.foaclothing.com/" target="_blank">
-                                <img class="rectangular-logo" src="assets/img/stores/logos/FOA.png" alt="">
+                            <a href="http://zigzag.lk" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/zigzag.png" alt="">
                             </a>
                         </div>
                     </div>
-                    <h5 class="store-title mt-3">F.O.A</h5>
+                    <h5 class="store-title mt-3">ZIGZAG</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/zigmajones.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://zigmajones.com/" target="_blank">
+                                <img class="rectangular-logo" src="assets/img/stores/logos/zigmajones.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Zigma Jones</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/dilfer.png" alt="">
+                        <div class="store-link">
+                            <a href="https://www.dilferclothing.com/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/dilfer.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Dilfer</h5>
                 </div>
 
                 <div class="store-block__item">
@@ -160,8 +161,153 @@
                 </div>
             </div>
         </div>
-
     </div>
+
+    <div class="category-block">
+        <div class="container">
+            <div class="category-block__title">Men</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, ratione explicabo officiis quae minus
+                optio dolores labore hic soluta assumenda, impedit autem quibusdam debitis? Perspiciatis ut nobis
+                quasi incidunt quidem?</p>
+        </div>
+
+        <div class="continer-fluid mt-5">
+            <div class="mobile-view-more d-flex justify-content-end px-4">
+                <a href="men.html">view more <i class="fi-sr-arrow-right ps-2"></i></a>
+            </div>
+            <div class="store-block">
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/stripes_and_checks.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://stripesandchecksinc.com/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/strips.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Stripes & Checks Inc</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/ekko.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://zigmajones.com/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/ekko.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">EKKO</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/thirteen_31.png" alt="">
+                        <div class="store-link">
+                            <a href="https://www.thirteen31.com/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/thirteen.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Thirteen 31</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/foa.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://www.foaclothing.com/" target="_blank">
+                                <img class="rectangular-logo" src="assets/img/stores/logos/FOA.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">F.O.A</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="category-block">
+        <div class="container">
+            <div class="category-block__title">Beauty &amp; Fragrance</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, ratione explicabo officiis quae minus
+                optio dolores labore hic soluta assumenda, impedit autem quibusdam debitis? Perspiciatis ut nobis
+                quasi incidunt quidem?</p>
+        </div>
+
+        <div class="continer-fluid mt-5">
+            <!-- <div class="mobile-view-more d-flex justify-content-end px-4">
+                <a href="featured.html">view more <i class="fi-sr-arrow-right ps-2"></i></a>
+            </div> -->
+            <div class="store-block">
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/spa-ceylon.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://lk.spaceylon.com/" target="_blank">
+                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/spa.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">SPA CEYLON</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/iris-garden.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://irisgarden.lk/" target="_blank">
+                                <img class="square-logo" src="assets/img/stores/logos/iris-garden.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Iris Garden</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/urban.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://urban.lk/" target="_blank">
+                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/urbanlk.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Urban</h5>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="category-block">
+        <div class="container">
+            <div class="category-block__title">Jewelry &amp; Accessories</div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, ratione explicabo officiis quae minus
+                optio dolores labore hic soluta assumenda, impedit autem quibusdam debitis? Perspiciatis ut nobis
+                quasi incidunt quidem?</p>
+        </div>
+
+        <div class="continer-fluid mt-5">
+            <!-- <div class="mobile-view-more d-flex justify-content-end px-4">
+                <a href="featured.html">view more <i class="fi-sr-arrow-right ps-2"></i></a>
+            </div> -->
+            <div class="store-block">
+                 <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/glitteray.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://www.glitterayjewellery.com/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/glitteray.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Glitteray</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </section>
 
 <include src="src/layouts/main-footer.html"></include>
