--- a/src/women.html
+++ b/src/women.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="bg-img-text-block container text-center">
-        <h1 class="font-weight-bold mb-4">Best Sellers</h1>
+        <h1 class="font-weight-bold mb-4">Women</h1>
         <h4 class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, ratione explicabo officiis quae
             minus
             optio dolores labore hic soluta assumenda, impedit autem quibusdam debitis? Perspiciatis ut nobis
@@ -38,7 +38,7 @@
 
                 <div class="store-block__item">
                     <div class="store-img position-relative">
-                        <img src="assets/img/stores/zigma-jones.jpg" alt="">
+                        <img src="assets/img/stores/zigmajones.jpg" alt="">
                         <div class="store-link">
                             <a href="https://zigmajones.com/" target="_blank">
                                 <img class="rectangular-logo" src="assets/img/stores/logos/zigmajones.png" alt="">
@@ -46,78 +46,6 @@
                         </div>
                     </div>
                     <h5 class="store-title mt-3">Zigma Jones</h5>
-                </div>
-
-                <div class="store-block__item">
-                    <div class="store-img position-relative">
-                        <img src="assets/img/stores/thirteen31.png" alt="">
-                        <div class="store-link">
-                            <a href="https://www.thirteen31.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/thirteen.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-                    <h5 class="store-title mt-3">Thirteen Thirty One</h5>
-                </div>
-
-                <div class="store-block__item">
-                    <div class="store-img position-relative">
-                        <img src="assets/img/stores/stripes-checks.jpg" alt="">
-                        <div class="store-link">
-                            <a href="https://stripesandchecksinc.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/strips.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-                    <h5 class="store-title mt-3">Stripes & Checks Inc</h5>
-                </div>
-
-                <div class="store-block__item">
-                    <div class="store-img position-relative">
-                        <img src="assets/img/stores/ekko.jpg" alt="">
-                        <div class="store-link">
-                            <a href="https://www.ekko.style/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/ekko.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-                    <h5 class="store-title mt-3">Ekko</h5>
-                </div>
-
-                <div class="store-block__item">
-                    <div class="store-img position-relative">
-                        <img src="assets/img/stores/glitteray.jpg" alt="">
-                        <div class="store-link">
-                            <a href="https://www.glitterayjewellery.com/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/glitteray.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-                    <h5 class="store-title mt-3">Glitteray</h5>
-                </div>
-
-                <div class="store-block__item">
-                    <div class="store-img position-relative">
-                        <img src="assets/img/stores/iris-garden.jpg" alt="">
-                        <div class="store-link">
-                            <a href="https://irisgarden.lk/" target="_blank">
-                                <img class="square-logo" src="assets/img/stores/logos/iris-garden.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-                    <h5 class="store-title mt-3">Iris Garden</h5>
-                </div>
-
-                <div class="store-block__item">
-                    <div class="store-img position-relative">
-                        <img src="assets/img/stores/urban.jpg" alt="">
-                        <div class="store-link">
-                            <a href="https://urban.lk/" target="_blank">
-                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/urbanlk.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-                    <h5 class="store-title mt-3">Urban</h5>
                 </div>
 
                 <div class="store-block__item">
@@ -134,6 +62,18 @@
 
                 <div class="store-block__item">
                     <div class="store-img position-relative">
+                        <img src="assets/img/stores/will-by-zac.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://willbyzac.com/" target="_blank">
+                                <img class="b2w-logo square-logo" src="assets/img/stores/logos/will-by-zac.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Will by Zac</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
                         <img src="assets/img/stores/emaan.jpg" alt="">
                         <div class="store-link">
                             <a href="https://www.emaanqirat.com/" target="_blank">
@@ -146,14 +86,38 @@
 
                 <div class="store-block__item">
                     <div class="store-img position-relative">
-                        <img src="assets/img/stores/prime-culture.jpg" alt="">
+                        <img src="assets/img/stores/thirteen_women.png" alt="">
                         <div class="store-link">
-                            <a href="https://primeculture.co/" target="_blank">
-                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/prime_culture.png" alt="">
+                            <a href="https://www.thirteen31.com/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/thirteen.png" alt="">
                             </a>
                         </div>
                     </div>
-                    <h5 class="store-title mt-3">Prime Culture</h5>
+                    <h5 class="store-title mt-3">Thirteen Thirty One</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/ekko_women.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://www.ekko.style/" target="_blank">
+                                <img class="b2w-logo rectangular-logo" src="assets/img/stores/logos/ekko.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Ekko</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/foa_women.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://www.foaclothing.com/" target="_blank">
+                                <img class="rectangular-logo" src="assets/img/stores/logos/FOA.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">F.O.A</h5>
                 </div>
 
                 <div class="store-block__item">
