--- a/src/index.html
+++ b/src/index.html
@@ -10,34 +10,38 @@
                 <div class="hero-section text-center text-md-start">
                     <h1 class="mb-5 d-none d-md-block">
                         <span>Shop Now</span>.<br>
-                        <span class="fade-in-delay">Pay Later.</span>
+                        <span>Pay Later.</span>
                     </h1>
-                    <h1 class="my-4 d-md-none">Shop Now.  <span class="fade-in-delay">Pay Later.</span></h1>
+                    <h1 class="my-4 d-md-none">Shop Now.  <span>Pay Later.</span></h1>
                 </div>
                 <div class="d-flex align-items-center position-relative d-md-none w-100" style="height: 270px;">
 
                     <figure class="hero-video">
-                        <video autoplay muted preload="none" defaultMuted playsinline data-setup="{}" poster="assets/video/card-slice-half.png">
+                        <!-- <video autoplay muted preload="none" defaultMuted playsinline data-setup="{}" poster="assets/video/card-slice-half.png">
                             <source src="assets/video/card-slice-half.webm" type="video/webm; codecs=vp8, vorbis" />
                             <source src="assets/video/card-slice-half.mp4" type="video/mp4" />
-                        </video>
+                        </video> -->
+
+                        <img src="assets/img/tiny-gif.gif" alt="">
                     </figure>
                 </div>
                 <div class="hero-section text-center text-md-start mt-5 mt-md-0">
-                    <h4 class="mp-text-dark-blue mt-5 mt-md-0 mb-4 mb-md-5 fade-in-delay delay-1">You can now shop at your favourite online store today
+                    <h4 class="mp-text-dark-blue mt-5 mt-md-0 mb-4 mb-md-5">You can now shop at your favourite online store today
                         and pay
                         later using mintpay.</h4>
-                    <a class="mp-btn fade-in-delay delay-2" href="stores.html">Shop now</a>
+                    <a class="mp-btn" href="/stores">Shop now</a>
                 </div>
             </div>
 
             <div class="col-12 col-md-7 d-none d-md-flex align-items-center position-relative">
 
                 <figure class="hero-video">
-                    <video autoplay muted preload="none" defaultMuted playsinline data-setup="{}" poster="assets/video/card-slice-half.png">
+                    <!-- <video autoplay muted preload="none" defaultMuted playsinline data-setup="{}" poster="assets/video/card-slice-half.png">
                         <source src="assets/video/card-slice-half.webm" type="video/webm; codecs=vp8, vorbis" />
                         <source src="assets/video/card-slice-half.mp4" type="video/mp4" />
-                    </video>
+                    </video> -->
+
+                    <img src="assets/img/tiny-gif.gif" alt="">
                 </figure>
             </div>
         </div>
